feat(input): Implement InputEventReceiver with full input dispatch pipeline
Implement the complete InputEventReceiver input system integration:
- InputEventWrapper with std::variant<MotionEvent, KeyEvent> for zero-cost event typing
- InputError enum for structured error handling
- Wire protocol parsing (19-byte header + typed payload) from socket IPC
- Looper FD watcher for async event reception (add_fd/remove_fd/poll_once)
- ViewGroup.dispatch_pointer_event with hit-testing, coordinate transformation,
  reverse Z-order child iteration, and event interception
- View.dispatch_pointer_event delegation and ViewRootImpl input forwarding
- Special event callbacks (focus, touch mode, pointer capture) with state tracking
- Mock InputChannel with Unix domain socket pair for host testing
- 438 tests covering all new/modified functionality

Generated with C++23 features: std::expected, std::variant, std::span,
structured bindings, and range-based constructs.